# rdf-differ-ws

./: .dockerignore  .env-dev  .env.dev  .env.prod  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  Makefile  README.md  curl  curl-examples.md  dev.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  logging.conf  production.yml  pyproject.toml  pytest.ini  requirements.prod.txt  requirements.txt  setup.cfg
.github/disabled-workflows/: package.yml
.github/workflows/: make-package.yml  package.yml  pythonapp.yml  test.yml
bash/: .env  install_os_dependencies.sh  run_api.sh  run_ui.sh  setup_fuseki.sh  setup_python.sh  stop_gunicorn.sh
doc/spec/: rdf-differ-model.eapx
docker/: .env  .env-dev  .env-test  .env.dev  Dockerfile  docker-compose-prod.yml  docker-compose-tests.yml  docker-compose.yml  redis.conf
docker/api/: Dockerfile
docker/fuseki/: Dockerfile
docker/nginx/: nginx.conf
docker/traefik/: docker-compose.yml
docker/ui/: Dockerfile
docs/: conf.py  index.rst
docs/sample-diffs/: corporate-body-xmldiff-2020-06-13-with-2020-08-21-MDR-4482-20200821T1731.xlsx  (+3 more)
output/: main.html
rdf_differ/: __init__.py  commands.py  config.py  defaults.py  diff_adapter.py  diff_getter.py  skos_history_wrapper.py  utils.py
rdf_differ_api/: __init__.py
requirements/: common.txt  dev.txt
scripts/: __init__.py  commands.py
templates/: template.config
test/: __init__.py  test_base.py
tests/: __init__.py  conftest.py
ui/: Dockerfile  requirements.txt
utils/: __init__.py  file_utils.py  generate_utils.py
(+5597 files in other folders)
